certificates display correctly on small screens

--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -14,6 +14,9 @@
   .heroBanner {
     padding: 2rem;
   }
+  .certificate {
+    width: 100%;
+  }
 }
 
 .buttons {
